==> captain58/embed_platform/drivers/stm32L476/src/dev_realtime.c <==
#define EXT_DEV_REALTIME
#include "rtc.h"
#include "hal_rtc_stm32l4.h"
#include "aos/include.h"
#include "tasks.h"

void VirtualTimeSecProc(void)
{
    TIME* time = &gs_vtime;
    const uint8* monthday;
    
    if((time->year & 0x03) == 0)        //判断今年是否为闰年
    {
        monthday = guc_BYearMonth;
    }
    else
    {
        monthday = guc_LYearMonth;
    }
    CPSR_ALLOC();
    RHINO_CPU_INTRPT_DISABLE();
                                            //秒更新
    time->sec++;
    if(time->sec >= 60)
    {
        time->sec = 0;
        time->min++;
    }
                                            //分更新
    if(time->min >= 60)
    {
        time->min = 0;
        time->hour++;
    }
                                            //小时更新
    if(time->hour >= 24)
    {
        time->hour = 0;
        time->dmon++;
        time->dweek++;
        time->dyear++;
    }
                                            //日更新
    if((time->dmon) == 0 || (time->dmon > monthday[time->month - 1]))
    {
        time->dmon = 1;
        time->month++;
    }
                                            //月更新,dyear更新
    if((time->month == 0) || (time->month > 12))
    {
        time->month = 1;
        time->dyear = 0;
        time->year++;
    }
                                            //年更新
    if(time->year > 99)
    {
        time->year = 0;
    }
    
    if(time->dweek > 6)                     //dweek更新
    {
        time->dweek = 0;
    }
    RHINO_CPU_INTRPT_ENABLE();
}

void SYS_RTC_SecProc(void *timer, void *arg)
{
#if (SYS_RTC_EN == 0)
    VirtualTimeSecProc();
#endif
    uint8_t msg = 0;
    //printf("SYS_RTC_SecProc = %d\n", gul_SysRunSecs);

                                            //读取内部RTC时间
    if(SYS_MCU_ReadDateTime(&gs_Time) != SYS_ERR_OK)
    {
        SYS_MCU_ReadDateTime(&gs_Time);
    }
                                            //系统运行时间增一
    gul_SysRunSecs++;
    
    extern const KTaskDeclare __TKDeclare[SYS_TK_NUM];
    const KTaskDeclare* dec = __TKDeclare;

    for(uint32 uc_i = 0; uc_i < SYS_TK_NUM; uc_i++, dec++)
    {
                                            //如果该进程不存在则不发送
        if(dec->ktask == __NULL || dec->stklen == 0)
        {
            continue;
        }
        
        if(!(guc_MsgApplied[uc_i] & Bit_Map8[MSG_CLS_TM]))
        {
            continue;
        }
        
        if(dec->ktask->tbl != 0 && dec->ktask->msg != NULL)             //时间消息仅针对消息进程
        {
            if(gs_TimeBk.year != gs_Time.year) //年事件
            {
//	                SYS_Message_Send(MSG_YEAR, uc_i);
                msg = MSG_YEAR;
                krhino_buf_queue_send(dec->ktask->msg, &msg, 1);
            }
            if(gs_TimeBk.month != gs_Time.month)//月事件
            {
//	                SYS_Message_Send(MSG_MON, uc_i);
                msg = MSG_MON;
                krhino_buf_queue_send(dec->ktask->msg, &msg, 1);
                
            }
            if(gs_TimeBk.dmon != gs_Time.dmon) //天事件
            {
//	                SYS_Message_Send(MSG_DAY, uc_i);
                msg = MSG_DAY;
                krhino_buf_queue_send(dec->ktask->msg, &msg, 1);

            }
            if(gs_TimeBk.hour != gs_Time.hour) //小时事件
            {
//	                SYS_Message_Send(MSG_HOUR, uc_i);
                msg = MSG_HOUR;
                krhino_buf_queue_send(dec->ktask->msg, &msg, 1);
                
            }
            if(gs_TimeBk.min != gs_Time.min)   //分事件
            {
				f_timecheck = true;			//过分后第30秒允许RTC校时
//	                SYS_Message_Send(MSG_MIN, uc_i);
                msg = MSG_MIN;
                krhino_buf_queue_send(dec->ktask->msg, &msg, 1);
                
            }
//	            SYS_Message_Send(MSG_SEC, uc_i); //发送秒消息
            msg = MSG_SEC;
            krhino_buf_queue_send(dec->ktask->msg, &msg, 1);
            
        }
    }
    
#if SYS_HRTC_EN > 0
    if((gs_Time.sec >= 30) && (gs_Time.sec <= 50) && f_timecheck)          	//在第30秒校时.每分钟校时一次.
    {
        SYS_RTC_CheckTime();
        f_timecheck = false;
    }
#endif
                                            //备份时间
    MoveBuffer((uint8*)&gs_Time, (uint8*)&gs_TimeBk, sizeof(TIME));


}

void SYS_RTC_Init(void)
{
#if (SYS_RTC_EN == 0)
    VirtualTimeInit();
#else
    g_stRtcDev.port = 0;
    g_stRtcDev.config.format = HAL_RTC_FORMAT_BCD;

    hal_rtc_init(&g_stRtcDev);

    //HAL_Init_RTC();
    //HAL_RTC_Start();
#endif
    
#if SYS_HRTC_EN > 0
    Init_I2C_HRTC(&gs_HrtcPort);            //初始化i2c总线
    SYS_RTC_CheckTime();
#endif

                                            //创建用户资源
//	    SYS_SEM_Create(1, &gs_RealTimeRes);
    krhino_sem_create(&gs_RealTimeRes, "RealTime", 1);

                                            //创建一个定时器(定时时间1s)
    gul_SysRunSecs = 0;
//	    SYS_Timer_Create(SYS_RTC_SecProc, __NULL, 100, TIMER_ID_RTC, false);
    krhino_timer_create(&g_s_timer, "sec_timer", SYS_RTC_SecProc,
                        krhino_ms_to_ticks(1000), krhino_ms_to_ticks(1000), 0, 1);
	                                        //初始化备份时间
    SYS_MCU_ReadDateTime(&gs_Time);          //
    MoveBuffer((uint8*)&gs_Time, (uint8*)&gs_TimeBk, sizeof(TIME));
    
    f_timecheck = true;					    //上电后就允许RTC校时

}

uint8 SYS_MCU_ReadBCDDateTime(TIME * datetime)
{
    
//	    TDev* dev = SYS_DEV_Open(DEV_NO_SYS, 0, __NULL);
//	    if(dev != __NULL)
//	    {                                       //获取时间
//	        ((TDevSys*)dev->devfunc)->GetTime(datetime);
//	        SYS_DEV_Close(dev);
//	        return SYS_ERR_OK;
//	    }
    
    rtc_time_t rtc_t;

    if(!hal_rtc_get_time(&g_stRtcDev,&rtc_t))
    {
        datetime->sec = rtc_t.sec;
        datetime->min = rtc_t.min;
        datetime->hour = rtc_t.hr;
        datetime->dmon = rtc_t.date;
        datetime->month = rtc_t.month;
        datetime->year = rtc_t.year;
        datetime->dweek = rtc_t.weekday;
        return SYS_ERR_OK;
    }
    return SYS_ERR_FT;
}

uint8 SYS_MCU_WriteDateTime(TIME * datetime)
{
    const uint8* monthday;
    rtc_time_t rtc_t;
                                            //判断设置数据的合法性
    if(datetime->year > 99 || datetime->month == 0 || 
       datetime->month > 12 || datetime->dmon == 0 || 
       datetime->hour >= 24 || datetime->min >= 60 || 
       datetime->sec >= 60)
    {
        return SYS_ERR_FT;
    }
    
    if((datetime->year & 0x03) == 0)        //判断今年是否为闰年
    {
        monthday = guc_BYearMonth;
    }
    else
    {
        monthday = guc_LYearMonth;  
    }
                                            //日的合法性
    if(datetime->dmon > monthday[datetime->month - 1])
    {
        return SYS_ERR_FT;
    }
                                            //当前为一年中的第几天
//	    datetime->dyear = gui_MonthBeginDay[datetime->month - 1] + datetime->dmon - 1;
//	                                            //判断今年是否为闰年,是否已过2月
//	    if((datetime->year & 0x03) == 0 && datetime->month > 2)
//	    {
//	        datetime->dyear++;
//	    }
    datetime->dweek = CalcWeek((uint8*)&datetime->dmon, 1);
    
#if (SYS_RTC_EN == 0)
    SetVirtualTime(datetime);
    return SYS_ERR_OK;
    
#else
                                            //打开设备
//	    TDev* dev = SYS_DEV_Open(DEV_NO_SYS, 0, __NULL);
//	    if(dev != __NULL)
//	    {                                       //设置ARMRTC时间
//	        ((TDevSys*)dev->devfunc)->SetTime(datetime);
//	        SYS_DEV_Close(dev); 
//	        return SYS_ERR_OK;
//	    }
    rtc_t.sec = ByteHexToBcd(datetime->sec);
    rtc_t.min = ByteHexToBcd(datetime->min);
    rtc_t.hr = ByteHexToBcd(datetime->hour);
    rtc_t.date = ByteHexToBcd(datetime->dmon);
    rtc_t.month = ByteHexToBcd(datetime->month);
    rtc_t.year = ByteHexToBcd(datetime->year);
    rtc_t.weekday = datetime->dweek;
    

    if(!hal_rtc_set_time(&g_stRtcDev,(const rtc_time_t*)&rtc_t))
    {
        return SYS_ERR_OK;
    }

    return SYS_ERR_FT;
#endif
}

uint8 SYS_WriteDateTime(TIME* datetime)
{
    uint8 result;
    
    krhino_sem_take(&gs_RealTimeRes, RHINO_WAIT_FOREVER);
    result = RTC_ProcTEsMsg(HRTC_RW_WH, datetime);
    krhino_sem_give(&gs_RealTimeRes);
    return result;
}

uint8 SYS_ReadDateTime(TIME* datetime)
{
    uint8 result;
    krhino_sem_take(&gs_RealTimeRes, RHINO_WAIT_FOREVER);
    result = RTC_ProcTEsMsg(HRTC_RW_RH, datetime);
    krhino_sem_give(&gs_RealTimeRes);
    return result; 
}

uint8 SYS_ReadBCDDateTime(TIME* datetime)
{
    uint8 result;
    krhino_sem_take(&gs_RealTimeRes, RHINO_WAIT_FOREVER);
    result = RTC_ProcTEsMsg(HRTC_RW_RB, datetime);
    krhino_sem_give(&gs_RealTimeRes);
    return result; 
}

uint8 SYS_WriteBCDDateTime(TIME* datetime)
{
    uint8 result;
    krhino_sem_take(&gs_RealTimeRes, RHINO_WAIT_FOREVER);
    result = RTC_ProcTEsMsg(HRTC_RW_WB, datetime);
    krhino_sem_give(&gs_RealTimeRes);
    return result; 
}
