==> captain58/embed_platform/drivers/GD32F30x/src/dev_realtime.c <==
#define EXT_DEV_REALTIME
#include "WOSsys.h"
#include "sys.h"
#include "hal.h"
#include "bsp.h"
#include "apis.h"

void _virtualTimeSecProc(void)
{
    TIME* time = &gs_vtime;
    const uint8* monthday;
    
    if((time->year & 0x03) == 0)        //判断今年是否为闰年
    {
        monthday = guc_BYearMonth;
    }
    else
    {
        monthday = guc_LYearMonth;
    }
    SYS_ENTER_SCRT();
                                            //秒更新
    time->sec++;
    if(time->sec >= 60)
    {
        time->sec = 0;
        time->min++;
    }
                                            //分更新
    if(time->min >= 60)
    {
        time->min = 0;
        time->hour++;
    }
                                            //小时更新
    if(time->hour >= 24)
    {
        time->hour = 0;
        time->day++;
        time->week++;
        time->dyear++;
    }
                                            //日更新
    if((time->day) == 0 || (time->day > monthday[time->month - 1]))
    {
        time->day = 1;
        time->month++;
    }
                                            //月更新,dyear更新
    if((time->month == 0) || (time->month > 12))
    {
        time->month = 1;
        time->dyear = 0;
        time->year++;
    }
                                            //年更新
    if(time->year > 99)
    {
        time->year = 0;
    }
    
    if(time->week > 6)                    //dweek更新
    {
        time->week = 0;
    }
    SYS_EXIT_SCRT();
}

uint8 SYS_MCU_ReadBCDDateTime(TIME* datetime)
{ 
    if(SYS_MCU_ReadDateTime(datetime) == SYS_ERR_OK)
    {
        datetime->sec = ByteHexToBcd(datetime->sec);
        datetime->min = ByteHexToBcd(datetime->min);
        datetime->hour = ByteHexToBcd(datetime->hour);
        datetime->day = ByteHexToBcd(datetime->day);
        datetime->month = ByteHexToBcd(datetime->month);
        datetime->year = ByteHexToBcd(datetime->year);
        datetime->dweek = datetime->dweek;
        datetime->dyear = gp_calclib->IntHexToBcd(datetime->dyear);
        return SYS_ERR_OK;
    }
    
    return SYS_ERR_FT;
}

uint8 SYS_MCU_WriteDateTime(TIME* datetime)
{
    const uint8* monthday;
                                            //判断设置数据的合法性
    if(datetime->year > 99 || datetime->month == 0 || 
       datetime->month > 12 || datetime->day == 0 || 
       datetime->hour >= 24 || datetime->min >= 60 || 
       datetime->sec >= 60)
    {
        return SYS_ERR_FT;
    }
    
    if((datetime->year & 0x03) == 0)        //判断今年是否为闰年
    {
        monthday = guc_BYearMonth;
    }
    else
    {
        monthday = guc_LYearMonth;  
    }
                                            //日的合法性
    if(datetime->day > monthday[datetime->month - 1])
    {
        return SYS_ERR_FT;
    }
                                            //当前为一年中的第几天
    datetime->dyear = gui_MonthBeginDay[datetime->month - 1] + datetime->day - 1;
                                            //判断今年是否为闰年,是否已过2月
    if((datetime->year & 0x03) == 0 && datetime->month > 2)
    {
        datetime->dyear++;
    }
    datetime->dweek = CalcWeek((uint8*)&datetime->day);
    
#if (SYS_RTC_EN == 0)
    _setVirtualTime(datetime);
    return SYS_ERR_OK;
    
#else
    HAL_RTC_SetTimes(datetime);
    return SYS_ERR_OK;
#endif
}

uint8 SYS_MCU_ReadBCDDateTime(TIME* datetime)

{
#if (SYS_RTC_EN == 0)
    _getVirtualTime(datetime);
    return SYS_ERR_OK;
    
#else
    HAL_RTC_GetTimes(datetime);
    return SYS_ERR_OK;
#endif
}

uint8 SYS_MCU_WriteDateTime(TIME* datetime)
{
    const uint8* monthday;
                                            //判断设置数据的合法性
    if(datetime->year > 99 || datetime->month == 0 || 
       datetime->month > 12 || datetime->day == 0 || 
       datetime->hour >= 24 || datetime->min >= 60 || 
       datetime->sec >= 60)
    {
        return SYS_ERR_FT;
    }
    
    if((datetime->year & 0x03) == 0)        //判断今年是否为闰年
    {
        monthday = guc_BYearMonth;
    }
    else
    {
        monthday = guc_LYearMonth;  
    }
                                            //日的合法性
    if(datetime->day > monthday[datetime->month - 1])
    {
        return SYS_ERR_FT;
    }
                                            //当前为一年中的第几天
    datetime->dyear = gui_MonthBeginDay[datetime->month - 1] + datetime->day - 1;
                                            //判断今年是否为闰年,是否已过2月
    if((datetime->year & 0x03) == 0 && datetime->month > 2)
    {
        datetime->dyear++;
    }
    datetime->week = CalcWeek((uint8*)&datetime->day);
    
#if (SYS_RTC_EN == 0)
    _setVirtualTime(datetime);
    return SYS_ERR_OK;
    
#else
    SYS_MCU_WriteBCDDateTime(datetime);
    return SYS_ERR_OK;
#endif
}

uint8 SYS_WriteDateTime(TIME* datetime)
{
    uint8 result;
#ifndef __NO_SYS__     
    SYS_SEM_Wait(&gs_RealTimeRes, 0);
    result = RTC_ProcTEsMsg(HRTC_RW_WH, datetime);
    SYS_SEM_Release(&gs_RealTimeRes);
#else
    result = RTC_ProcTEsMsg(HRTC_RW_WH, datetime);
#endif
    return result;
}

uint8 SYS_WriteBCDDateTime(TIME* datetime)
{
    uint8 result;
#ifndef __NO_SYS__     
    SYS_SEM_Wait(&gs_RealTimeRes, 0);
    result = RTC_ProcTEsMsg(HRTC_RW_WB, datetime);
    SYS_SEM_Release(&gs_RealTimeRes);
#else
    result = RTC_ProcTEsMsg(HRTC_RW_WB, datetime);
#endif    
    return result; 
}

uint8 SYS_ReadDateTime(TIME* datetime)
{
    uint8 result;
#ifndef __NO_SYS__ 
    SYS_SEM_Wait(&gs_RealTimeRes, 0);
    result = RTC_ProcTEsMsg(HRTC_RW_RH, datetime);
    SYS_SEM_Release(&gs_RealTimeRes);
#else
    result = RTC_ProcTEsMsg(HRTC_RW_RH, datetime);
#endif
    return result; 
}

uint8 SYS_ReadBCDDateTime(TIME* datetime)
{
    uint8 result;
#ifndef __NO_SYS__ 
    SYS_SEM_Wait(&gs_RealTimeRes, 0);
    result = RTC_ProcTEsMsg(HRTC_RW_RB, datetime);
    SYS_SEM_Release(&gs_RealTimeRes);
#else
    result = RTC_ProcTEsMsg(HRTC_RW_RB, datetime);
#endif    
    return result; 
}

bool SYS_RTC_SecProc(void* pdata)
{
#if (SYS_RTC_EN == 0)
    _virtualTimeSecProc();
#endif
                                            //读取内部RTC时间
    if(SYS_MCU_ReadDateTime(&gs_Time) != SYS_ERR_OK)
    {
        SYS_MCU_ReadDateTime(&gs_Time);
    }
                                            //系统运行时间增一
    gul_SysRunSecs++;
    
#if (true)                                  //事件分发
    extern const TESTcbDeclare __TKDeclare[SYS_TK_NUM];
    const TESTcbDeclare* dec = __TKDeclare + 1;

    for(uint32 uc_i = 1; uc_i < (SYS_TK_NUM - 1); uc_i++, dec++)
    {
                                            //如果该进程不存在则不发送
        if(dec->tcbc == __NULL || dec->stklen == 0)
        {
            continue;
        }
        
        if(!(gucs_MsgApplied[uc_i] & Bit_Map8[MSG_CLS_TM]))
        {
            continue;
        }
        
        if(dec->tcbc->tbl != 0)             //时间消息仅针对消息进程
        {
            if(gs_TimeBk.year != gs_Time.year) //年事件
            {
                SYS_Message_Send(MSG_YEAR, uc_i);
            }
            if(gs_TimeBk.month != gs_Time.month)//月事件
            {
                SYS_Message_Send(MSG_MON, uc_i);
            }
            if(gs_TimeBk.day != gs_Time.day) //天事件
            {
                SYS_Message_Send(MSG_DAY, uc_i);
            }
            if(gs_TimeBk.hour != gs_Time.hour) //小时事件
            {
                SYS_Message_Send(MSG_HOUR, uc_i);
            }
            if(gs_TimeBk.min != gs_Time.min)   //分事件
            {
				f_timecheck = true;			//过分后第30秒允许RTC校时
                SYS_Message_Send(MSG_MIN, uc_i);
            }
            SYS_Message_Send(MSG_SEC, uc_i); //发送秒消息
        }
    }
#endif

#if SYS_HRTC_EN > 0
    if((gs_Time.sec >= 30) && (gs_Time.sec <= 50) && f_timecheck)          	//在第30秒校时.每分钟校时一次.
    {
        SYS_RTC_CheckTime();
        f_timecheck = false;
    }
#endif
                                            //备份时间
    memcpy_s((uint8*)&gs_TimeBk, (uint8*)&gs_Time, sizeof(TIME));

    return true;
}

void SYS_RTC_SecProc(void)
{
#if (SYS_RTC_EN == 0)
    _virtualTimeSecProc();
#endif
                                            //读取内部RTC时间
    if(SYS_MCU_ReadDateTime(&gs_Time) != SYS_ERR_OK)
    {
        SYS_MCU_ReadDateTime(&gs_Time);
    }
                                            //系统运行时间增一
    gul_SysRunSecs++;
    
#if (true)                                  //事件分发
    //extern const TESTcbDeclare __TKDeclare[SYS_TK_NUM];
    //const TESTcbDeclare* dec = __TKDeclare + 1;

    for(uint32 uc_i = 0; uc_i < (SYS_TK_NUM); uc_i++)
    {

        
//        if(!(gucs_MsgApplied[uc_i] & Bit_Map8[MSG_CLS_TM]))
//        {
//            continue;
//        }
//        
////	        if(dec->tcbc->tbl != 0)             //时间消息仅针对消息进程
//        {
//            if(gs_TimeBk.year != gs_Time.year) //年事件
//            {
//                //SYS_Message_Send(MSG_YEAR, uc_i);
//            }
//            if(gs_TimeBk.month != gs_Time.month)//月事件
//            {
//                //SYS_Message_Send(MSG_MON, uc_i);
//            }
//            if(gs_TimeBk.day != gs_Time.day) //天事件
//            {
//                //SYS_Message_Send(MSG_DAY, uc_i);
//            }
//            if(gs_TimeBk.hour != gs_Time.hour) //小时事件
//            {
//                //SYS_Message_Send(MSG_HOUR, uc_i);
//            }
//            if(gs_TimeBk.min != gs_Time.min)   //分事件
//            {
//				f_timecheck = true;			//过分后第30秒允许RTC校时
//                //SYS_Message_Send(MSG_MIN, uc_i);
//                SET_SYSE_TMR_MINU;
//            }
//            //SYS_Message_Send(MSG_SEC, uc_i); //发送秒消息
//        }
    }
#endif

#if SYS_HRTC_EN > 0
    if((gs_Time.sec >= 30) && (gs_Time.sec <= 50) && f_timecheck)          	//在第30秒校时.每分钟校时一次.
    {
        SYS_RTC_CheckTime();
        f_timecheck = false;
    }
#endif
                                            //备份时间
    memcpy_s((uint8*)&gs_TimeBk, (uint8*)&gs_Time, sizeof(TIME));

    //return true;
}

void SYS_RTC_Init(void)
{
#if (SYS_RTC_EN == 0)
    _virtualTimeInit();
#else
    HAL_InitRTC();
#endif
    
#if SYS_HRTC_EN > 0
    Init_I2C_HRTC(&gs_HrtcPort);            //初始化i2c总线
    SYS_RTC_CheckTime();
#endif
 #ifndef __NO_SYS__ 
    //创建用户资源
    SYS_SEM_Create(1, &gs_RealTimeRes);
    //创建一个定时器(定时时间1s)    
    SYS_Timer_Create(SYS_RTC_SecProc, __NULL, SYS_TICK_PER_SEC, ID_SWTIMER_RTC, false);
#endif	

    gul_SysRunSecs = 0;
	                                        //初始化备份时间
    SYS_MCU_ReadDateTime(&gs_Time);          //
    memcpy_s((uint8*)&gs_TimeBk, (uint8*)&gs_Time, sizeof(TIME));
    
    f_timecheck = true;					    //上电后就允许RTC校时
}
